--- a/Front_End/CSS/NguoiDung/profile-expert.css
+++ b/Front_End/CSS/NguoiDung/profile-expert.css
@@ -40,7 +40,7 @@
   height: 100px;
   border-radius: 50%;
   object-fit: cover;
-  border: 4px solid #00bfa6;
+  border: 4px solid #A993EC;
 }
 
 .expert-details h1 {
@@ -66,7 +66,7 @@
 
 .tab-button {
   flex: 1;
-  background-color: #f0f0f0;
+  background-color: #A993EC;
   border: none;
   padding: 14px;
   cursor: pointer;
@@ -76,7 +76,7 @@
 
 .tab-button:hover,
 .tab-button.active {
-  background-color: #00bfa6;
+  background-color: #5a4d84;
   color: white;
   font-weight: 600;
 }
@@ -87,7 +87,7 @@
 }
 
 .tab-content h3 {
-  color: #00bfa6;
+  color: #A993EC;
   margin-top: 0;
 }
 
